--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -379,6 +379,7 @@ padding: 0%;
   opacity: 0;
   visibility: hidden;
   transition: opacity .4s, visibility .4s;
+  z-index: 999;
 }
 .my-modal .border-form{
   margin-top: 8px;
